# audire-flow

./: .gitignore  dummy.docx  main.py  pyproject.toml  stage4-prd.md
backend/: main.py
backend/exports/: Refined_Report.docx  refined_Dummy_Report_Test.docx
backend/prompts/: 1_clarity.md  2_tone.md  3_criticality.md  4_regulatory.md  5_actionability.md  6_summary.md
backend/temp/: 8ed16484-9a55-4291-aaaf-d6939fff6c62_refined_Dummy_Report_Test.docx  ec251de1-aab0-47a7-b7d2-d8586216f2be_Dummy_Report_Test.docx
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: DocumentCanvas.tsx  ExportDialog.tsx  FileUpload.tsx  FindingsTable.tsx  GlobalNav.tsx  RefinementCell.tsx  Sidebar.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
